private_server/guard/CELL-11/Q-59/error.txt
  File "/kunden/homepages/8/d657042007/htdocs/CodeSet/private_server/guard/CELL-11/Q-59/11-59.py", line 2
    absolute = 
              ^
SyntaxError: invalid syntax
